fixed rounding error, timer more visible

--- a/tbt.css
+++ b/tbt.css
@@ -22,3 +22,7 @@ body {
     margin: 5px;
     text-align: center;     
 }
+/* TODO: have it be responsive to device screen size*/
+.timer-text {  
+    font-size: 10em;
+}
